<resources>
    <string name="app_name">Trip Count</string>
    <string name="znajomi">FRIENDS</string>
    <string name="dodaj_znajomych">ADD FRIENDS</string>
    <string name="dodaj_wycieczke">ADD A TRIP</string>
    <string name="dodaj_kategorie">ADD CATEGORY</string>
    <string name="dodaj_wydatek">ADD EXPENSES</string>
    <string name="wycieczki">TRIPS</string>
    <string name="konto">ACCOUNT</string>
    <string name="zwroc_koszty">RETURN COSTS</string>
    <string name="historia">HISTORY</string>
    <string name="bilans">BALANCE</string>
    <string name="ustawienia">SETTINGS</string>
    <string name="logowanie">LOGIN</string>
    <string name="rejestracja">REGISTER</string>
    <string name="edytuj_wydatek">EDIT EXPENSES</string>
    <string name="email">E-mail</string>
    <string name="haslo">Password</string>
    <string name="powtorz_haslo">Repeat password</string>
    <string name="telefon">Phone number</string>
    <string name="jezyk">Language</string>
    <string name="nazwa">Name</string>
    <string name="imie">Name</string>
    <string name="nazwisko">Last Name</string>
    <string name="kategoria">Category</string>
    <string name="kwota">Value</string>
    <string name="opis">Description</string>
    <string name="planowana_kwota">Planned amount</string>
    <string name="ilosc_dni">Number of days</string>
    <string name="dodaj_ikone">Add icon</string>
    <string name="wybierz_kolor">choose color</string>
    <string name="email_zacheta">Enter your friend\'s email or phone number</string>
    <string name="powinien_zwrocic">should return for</string>
    <string name="logwanie_zacheta">Log in</string>
    <string name="rejestracja_zacheta">Register</string>
    <string name="podaj_e_mail_itd">Enter your friend\'s email</string>
    <string name="polski" translatable="false">Polski</string>
    <string name="angielski" translatable="false">English</string>
    <string name="niemiecki" translatable="false">Deutsch</string>
    <string name="wloski" translatable="false">Italiano</string>
    <string name="hiszpanski" translatable="false">Español</string>
    <string name="cat_jedzenie">Food</string>
    <string name="cat_spanie">Sleeping</string>
    <string name="cat_napoje">Drinks</string>
    <string name="cat_atrakcje">Attractions</string>
    <string name="cat_samolot">Plane</string>
    <string name="cat_transport">Transport</string>
    <string name="logowanie_powrot">Login</string>
    <string name="wylogowanie">Log out</string>
    <string name="akceptuj">Accept</string>
    <string name="Szczegóły">Details</string>
    <string name="zaplacone_przez">Paid by</string>
    <string name="zaplacone_dla">Paid for</string>
    <string name="dzisiaj">TODAY</string>
    <string name="lista_znajomych">Friends List</string>
    <string name="kategorie_przycisk">Category balance</string>
    <string name="kategorie">Enter the percentage you want to allocate to the categories</string>
    <string name="zaproszenia">INVITATIONS</string>
    <string name="toastNull">All values must be filled in</string>
    <string name="toastCorectValue">Enter correct value</string>
    <string name="toastCorectADDinvite">Invitation added successfully</string>
    <string name="toastNOTCorectADDinvite">You cannot send an invitation to this person</string>
    <string name="toastCorectADDTrip">Trip added successfully</string>
    <string name="toastCorectADDExpense">Expense added successfully</string>
    <string name="toastCorectADDReturn">Refund successfully added</string>
    <string name="toastPasswordsDoNotMatch">The passwords do not match</string>
    <string name="ThePasswordIsTooShort">The password is too short</string>
    <string name="showRegisterError">Incorrect data, registration failed</string>
    <string name="refunds">Refunds</string>
    <string name="expenses">Expenses</string>
    <string name="about">About App</string>
    <string name="aboutText">The "Trip Count" application is a student project, you can settle accounts with your friends during or outside of trips.
You can see in it what categories you spend your money on. After adding expenses, you are able to observe the balance of the trip participants and then add the reimbursement.</string>
</resources>