...
    AlertDialog(
        onDismissRequest = onDismiss,
        confirmButton = {
            TextButton(onClick = onDismiss)
            { Text(text = "OK") }
        },
        title = { Text(text = "Wrong credentials") },
        text = { Text(text = "Incorrect email address or password") }
    )
}

